# aeson-applicative

./: .travis.yml  README.md  aeson-applicative.cabal  stack.yaml
src/Data/Aeson/: Applicative.hs
src/Data/Aeson/Applicative/Internal/: FromJSON.hs  Generic.hs  ToJSON.hs
